removed usless code, started to implement responsive

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
 
     <nav>
-        <div class="nav-list">
-            <ul>
-                <li class="nav-item">
+        <div class="menu">
+            <ul class="menu-list">
+                <li class="menu-item">
                     <a class="active" href="#torneiSettimanali">Weekly Tournaments</a>
                 </li>
-                <li  class="nav-item">
+                <li  class="menu-item">
                     <a href="#torneoUniversitario">University Tournament</a>
                 </li>
-                <li  class="nav-item">
+                <li  class="menu-item">
                     <a href="#uniscitiAlTeam">Join Us</a>
                 </li>
             </ul>
@@ -35,35 +35,29 @@
     </nav>
 
     <div class="section" id="torneiSettimanali">
-        <div class="section-image">
-            
-        </div>
-        <div>
-            <div class="section-text">
+        <div class="section-image"></div>
+        <div class="section-text">
+            <div class="generic-content">
                 <h1>Join the Weekly Tournaments</h1>
                 <p>Every end of the week we orginize a tournament on lichess.org, come and join us to meet new friends and improve in your skills. We're waiting you!</p>
-            </div>      
-        </div>
+            </div>     
+        </div>      
     </div>
 
     <div class="section" id="torneoUniversitario">
-        <div>
-            <div class="section-text">
+        <div class="section-text">
+            <div class="generic-content">
                 <h1>Challenge the Others University</h1>
                 <p>That's the greatest tournament around here, it's a challenge between the main italian universitys and every year one of them will get the title for the strongest club.</p>
             </div>
         </div>
-        <div class="section-image">
-
-        </div>
+        <div class="section-image"></div>
     </div>
 
     <div class="section" id="uniscitiAlTeam">
-        <div class="section-image">
-
-        </div>
-        <div>
-            <div class="section-text">
+        <div class="section-image"></div>
+        <div class="section-text">
+            <div class="generic-content">
                 <h1>Join Us in our clubs</h1>
                 <p>We're playing on boths of the most famous chess websites, as in Chess.com and Lichess.org, come in the place where all the students of PoliTo are gathering.</p>
             </div>
@@ -72,9 +66,19 @@
 
     <footer>
         <div class="social">
-            <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
-            <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
-            <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
+            <div class="social-list-wrapper">
+                <ul class="social-list">
+                    <li class="social-item">
+                        <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
+                    </li>
+                </ul>  
+            </div>
         </div>
         <div class="copyright">
             <p>&copy; Copyright 2022, PoliTo Chess Club</p>
