--- a/index.html
+++ b/index.html
@@ -8,11 +8,29 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <title>PoliTo Chess Club</title>
+    <script>
+        /* Open when someone clicks on the span element */
+        function openNav() {
+        document.getElementById("hamburgerMenu").style.width = "100%";
+        }
+
+        /* Close when someone clicks on the "x" symbol inside the overlay */
+        function closeNav() {
+        document.getElementById("hamburgerMenu").style.width = "0%";
+        } 
+    </script>
 </head>
 <body>
 
     <nav>
         <div class="menu">
+
+            <div class="hamburger" onclick="openNav()">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
             <ul class="menu-list">
                 <li class="menu-item">
                     <a class="active" href="#torneiSettimanali">Weekly Tournaments</a>
@@ -33,6 +51,15 @@
         </div>
 
     </nav>
+
+    <div id="hamburgerMenu" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a class="active" href="#torneiSettimanali" onclick="closeNav()">Weekly Tournaments</a>
+            <a href="#torneoUniversitario" onclick="closeNav()">University Tournament</a>
+            <a href="#uniscitiAlTeam" onclick="closeNav()">Join Us</a>
+        </div>
+      </div>
 
     <div class="section" id="torneiSettimanali">
         <div class="section-image"></div>
