--- a/index.html
+++ b/index.html
@@ -8,22 +8,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <title>PoliTo Chess Club</title>
-    <script>
-        /* Open when someone clicks on the span element */
-        function openNav() {
-        document.getElementById("hamburgerMenu").style.width = "100%";
-        }
-
-        /* Close when someone clicks on the "x" symbol inside the overlay */
-        function closeNav() {
-        document.getElementById("hamburgerMenu").style.width = "0%";
-        } 
-    </script>
+    <script src="scripts.js"></script> 
 </head>
 <body>
 
     <nav>
-        <div class="menu">
+        <div class="menu" id="menu">
 
             <div class="hamburger" onclick="openNav()">
                 <span class="bar"></span>
@@ -31,9 +21,12 @@
                 <span class="bar"></span>
             </div>
 
-            <ul class="menu-list">
+            <ul>
+                <li  class="menu-item">
+                    <a href="events.html">Events</a>
+                </li>
                 <li class="menu-item">
-                    <a class="active" href="#torneiSettimanali">Weekly Tournaments</a>
+                    <a href="#torneiSettimanali">Weekly Tournaments</a>
                 </li>
                 <li  class="menu-item">
                     <a href="#torneoUniversitario">University Tournament</a>
@@ -55,15 +48,16 @@
     <div id="hamburgerMenu" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a class="active" href="#torneiSettimanali" onclick="closeNav()">Weekly Tournaments</a>
+            <a href="events.html" onclick="closeNav()">Events</a>
+            <a href="#torneiSettimanali" onclick="closeNav()">Weekly Tournaments</a>
             <a href="#torneoUniversitario" onclick="closeNav()">University Tournament</a>
             <a href="#uniscitiAlTeam" onclick="closeNav()">Join Us</a>
         </div>
-      </div>
+    </div>
 
     <div class="section" id="torneiSettimanali">
         <div class="section-image"></div>
-        <div class="section-text">
+        <div class="section-text flexFont">
             <div class="generic-content">
                 <h1>Join the Weekly Tournaments</h1>
                 <p>Every end of the week we orginize a tournament on lichess.org, come and join us to meet new friends and improve in your skills. We're waiting you!</p>
@@ -72,7 +66,7 @@
     </div>
 
     <div class="section" id="torneoUniversitario">
-        <div class="section-text">
+        <div class="section-text flexFont">
             <div class="generic-content">
                 <h1>Challenge the Others University</h1>
                 <p>That's the greatest tournament around here, it's a challenge between the main italian universitys and every year one of them will get the title for the strongest club.</p>
@@ -83,7 +77,7 @@
 
     <div class="section" id="uniscitiAlTeam">
         <div class="section-image"></div>
-        <div class="section-text">
+        <div class="section-text flexFont">
             <div class="generic-content">
                 <h1>Join Us in our clubs</h1>
                 <p>We're playing on boths of the most famous chess websites, as in Chess.com and Lichess.org, come in the place where all the students of PoliTo are gathering.</p>
@@ -94,7 +88,7 @@
     <footer>
         <div class="social">
             <div class="social-list-wrapper">
-                <ul class="social-list">
+                <ul>
                     <li class="social-item">
                         <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
                     </li>
@@ -107,12 +101,10 @@
                 </ul>  
             </div>
         </div>
-        <div class="copyright">
+        <div class="copyright flexFont">
             <p>&copy; Copyright 2022, PoliTo Chess Club</p>
         </div>
     </footer>
 
 </body>
-<!-- e4 e5 for the win -->
-<!-- ciao mondo -->
 </html>
