--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
                 <span class="bar"></span>
             </div>
     
-            <ul>
+            <ul class="menu-list">
                 <li class="menu-item">
                     <a href="index.html">Home</a>
                 </li>
