--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <span class="bar"></span>
             </div>
 
-            <ul>
+            <ul class="menu-list">
                 <li  class="menu-item">
                     <a href="events.html">Events</a>
                 </li>
