--- a/index.html
+++ b/index.html
@@ -7,40 +7,41 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
     <title>PoliTo Chess Club</title>
     <script src="scripts.js"></script> 
 </head>
 <body>
 
-    <nav>
+    <nav id="header">
         <div class="menu" id="menu">
 
-            <div class="hamburger" onclick="openNav()">
+            <div class="hamburger" id="hamburger" onclick="openNav()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
 
-            <ul class="menu-list">
+            <ul class="menu-list" id="menu-list">
                 <li  class="menu-item">
                     <a href="events.html">Events</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#torneiSettimanali">Weekly Tournaments</a>
+                    <a href="#">Weekly Tournaments</a>
                 </li>
                 <li  class="menu-item">
-                    <a href="#torneoUniversitario">University Tournament</a>
+                    <a href="#">University Tournament</a>
                 </li>
                 <li  class="menu-item">
-                    <a href="#uniscitiAlTeam">Join Us</a>
+                    <a href="#">Join Us</a>
                 </li>
             </ul>
         </div>
 
-        <div class="logoClub">
+        <div class="logoClub" id="logoClub">
         </div>
 
-        <div class="logoPoli">
+        <div class="logoPoli" id="logoPoli">
         </div>
 
     </nav>
@@ -49,39 +50,21 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="events.html" onclick="closeNav()">Events</a>
-            <a href="#torneiSettimanali" onclick="closeNav()">Weekly Tournaments</a>
-            <a href="#torneoUniversitario" onclick="closeNav()">University Tournament</a>
-            <a href="#uniscitiAlTeam" onclick="closeNav()">Join Us</a>
+            <a href="#" onclick="closeNav()">Weekly Tournaments</a>
+            <a href="#" onclick="closeNav()">University Tournament</a>
+            <a href="#" onclick="closeNav()">Join Us</a>
         </div>
     </div>
 
-    <div class="section" id="torneiSettimanali">
-        <div class="section-image"></div>
-        <div class="section-text flexFont">
-            <div class="generic-content">
-                <h1>Join the Weekly Tournaments</h1>
-                <p>Every end of the week we orginize a tournament on lichess.org, come and join us to meet new friends and improve in your skills. We're waiting you!</p>
-            </div>     
-        </div>      
+    <div class="popup" id="popup">
+        <h1>We're currently working on this section of the website.</h1>
     </div>
 
-    <div class="section" id="torneoUniversitario">
-        <div class="section-text flexFont">
-            <div class="generic-content">
-                <h1>Challenge the Others University</h1>
-                <p>That's the greatest tournament around here, it's a challenge between the main italian universitys and every year one of them will get the title for the strongest club.</p>
-            </div>
-        </div>
-        <div class="section-image"></div>
-    </div>
+    <div class="preContent" id="preContent"></div>
 
-    <div class="section" id="uniscitiAlTeam">
-        <div class="section-image"></div>
-        <div class="section-text flexFont">
-            <div class="generic-content">
-                <h1>Join Us in our clubs</h1>
-                <p>We're playing on boths of the most famous chess websites, as in Chess.com and Lichess.org, come in the place where all the students of PoliTo are gathering.</p>
-            </div>
+    <div class="workInProgress flexFont">
+        <div class="generic-content">
+            <h1 style="font-family: 'Koulen' !important;">Work in Progress...</h1>
         </div>
     </div>
 
