--- a/indexNewVersion.html
+++ b/indexNewVersion.html
@@ -7,31 +7,32 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
-    <title>PoliTo Chess Club - Events</title>
+    <title>PoliTo Chess Club</title>
     <script src="scripts.js"></script> 
 </head>
 <body>
-    <nav id="header">
 
+    <nav id="header">
         <div class="menu" id="menu">
+
             <div class="hamburger" id="hamburger" onclick="openNav()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-    
+
             <ul class="menu-list" id="menu-list">
-                <li class="menu-item">
-                    <a href="index.html">Home</a>
+                <li  class="menu-item">
+                    <a href="events.html">Events</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#EngineeringMeetsChess">Engineering meets Chess</a>
+                    <a href="#">Weekly Tournaments</a>
                 </li>
-                <li class="menu-item">
-                    <a href="#">IRL Tournaments</a>
+                <li  class="menu-item">
+                    <a href="#">University Tournament</a>
                 </li>
-                <li class="menu-item">
-                    <a href="#">Other Events</a>
+                <li  class="menu-item">
+                    <a href="#">Join Us</a>
                 </li>
             </ul>
         </div>
@@ -47,21 +48,43 @@
     <div id="hamburgerMenu" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="index.html" onclick="closeNav()">Home</a>
-            <a href="#EngineeringMeetsChess" onclick="closeNav()">Engineering Meets Chess</a>
-            <a href="#" onclick="closeNav();">IRL Tournaments</a>
-            <a href="#" onclick="closeNav();">Other Events</a>
+            <a href="events.html" onclick="closeNav()">Events</a>
+            <a href="#" onclick="closeNav()">Weekly Tournaments</a>
+            <a href="#" onclick="closeNav()">University Tournament</a>
+            <a href="#" onclick="closeNav()">Join Us</a>
         </div>
-    </div>
-
-    <div class="popup" id="popup">
-        <h1>There are still no events in this section</h1>
     </div>
 
     <div class="preContent" id="preContent"></div>
 
-    <div style="height: 100%;">
+    <div class="section" id="torneiSettimanali">
+        <div class="section-image"></div>
+        <div class="section-text flexFont">
+            <div class="generic-content">
+                <h1>Join the Weekly Tournaments</h1>
+                <p>Every end of the week we orginize a tournament on lichess.org, come and join us to meet new friends and improve in your skills. We're waiting you!</p>
+            </div>     
+        </div>      
+    </div>
 
+    <div class="section" id="torneoUniversitario">
+        <div class="section-text flexFont">
+            <div class="generic-content">
+                <h1>Challenge the Others University</h1>
+                <p>That's the greatest tournament around here, it's a challenge between the main italian universitys and every year one of them will get the title for the strongest club.</p>
+            </div>
+        </div>
+        <div class="section-image"></div>
+    </div>
+
+    <div class="section" id="uniscitiAlTeam">
+        <div class="section-image"></div>
+        <div class="section-text flexFont">
+            <div class="generic-content">
+                <h1>Join Us in our clubs</h1>
+                <p>We're playing on boths of the most famous chess websites, as in Chess.com and Lichess.org, come in the place where all the students of PoliTo are gathering.</p>
+            </div>
+        </div>
     </div>
 
     <footer>
@@ -86,3 +109,4 @@
     </footer>
 
 </body>
+</html>
