--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav id="header">
         <div class="menu" id="menu">
 
-            <div class="hamburger" id="hamburger" onclick="openNav()">
+            <div class="hamburger" onclick="openNav()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
 
-            <ul class="menu-list" id="menu-list">
+            <ul class="menu-list">
                 <li  class="menu-item">
                     <a href="events.html">Events</a>
                 </li>
@@ -38,10 +38,10 @@
             </ul>
         </div>
 
-        <div class="logoClub" id="logoClub">
+        <div class="logoClub">
         </div>
 
-        <div class="logoPoli" id="logoPoli">
+        <div class="logoPoli">
         </div>
 
     </nav>
@@ -60,15 +60,13 @@
         <h1>We're currently working on this section of the website.</h1>
     </div>
 
-    <div class="preContent" id="preContent"></div>
-
-    <div class="workInProgress flexFont">
+    <div class="workInProgress flexFont" id="workInProgress">
         <div class="generic-content">
-            <h1 style="font-family: 'Koulen' !important;">Work in Progress...</h1>
+            <h1>Work in Progress, come later</h1>
         </div>
     </div>
 
-    <footer>
+    <footer id="footer">
         <div class="social">
             <div class="social-list-wrapper">
                 <ul>
