--- a/events.html
+++ b/events.html
@@ -21,18 +21,27 @@
     <script src="scripts.js"></script> 
 </head>
 <body>
-    <nav>
+    <nav id="header">
+        <div class="menu" id="menu">
 
-        <div class="menu">
             <div class="hamburger" onclick="openNav()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-    
+
             <ul class="menu-list">
-                <li class="menu-item">
+                <li  class="menu-item">
                     <a href="index.html">Home</a>
+                </li>
+                <li  class="menu-item">
+                    <a href="events.html">Events</a>
+                </li>
+                <li class="menu-item">
+                    <a href="otbtournaments.html">OTB Tournaments</a>
+                </li>
+                <li  class="menu-item">
+                    <a href="joinus.html">Join Us</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +57,10 @@
     <div id="hamburgerMenu" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="index.html" onclick="closeNav()">Home</a>
+            <a href="index.html" conclick="closeNav()">Home</a>
+            <a href="events.html" onclick="closeNav()">Events</a>
+            <a href="otbtournaments.html" onclick="closeNav()">OTB Tournaments</a>
+            <a href="joinus.html" onclick="closeNav()">Join Us</a>
         </div>
     </div>
 
