joinus page and carousel

--- a/joinus.html
+++ b/joinus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
     <title>PoliTo Chess Club</title>
-    <script src="scripts.js"></script> 
+    <script src="scripts/main.js"></script> 
 </head>
 <body>
 
@@ -59,6 +59,28 @@
     <div class="popup" id="popup">
         <h1>We're currently working on this section of the website.</h1>
     </div>
+
+<div class="section">
+    <div class="section-image">
+        <div class="generic-image" style="background: url(./images/chess.png) no-repeat center center;"></div>
+    </div>
+    <div class="section-text">
+        <div class="generic-content">
+            <a href="https://www.chess.com/club/polito"><h1 style="color: #002B49;">Chess.com</h1></a> 
+        </div>
+    </div>
+</div>
+
+<div class="section">
+    <div class="section-text">
+        <div class="generic-content">
+            <a href="https://lichess.org/team/polito"><h1 style="color: #002B49;">Lichess.org</h1></a>
+        </div>
+    </div>
+    <div class="section-image">
+        <div class="generic-image" style="background: url(./images/lichess.png) no-repeat center center;"></div>
+    </div>
+</div>
 
     <footer id="footer">
         <div class="social">
