--- a/otbtournaments.html
+++ b/otbtournaments.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
     <title>PoliTo Chess Club</title>
-    <script src="scripts.js"></script> 
+    <script src="scripts/main.js"></script>
 </head>
 <body>
 
@@ -58,6 +58,16 @@
 
     <div class="popup" id="popup">
         <h1>We're currently working on this section of the website.</h1>
+    </div>
+
+    <div class="preface">
+        <h2>This section is dedicated to the greatness and magnificence of the OTB tournaments. You can find here past tournaments final results and photos of our beautifull teammates</h1>
+    </div>
+
+    <div class="carousel-container">
+        <div id="carousel" class="carousel">
+
+        </div>
     </div>
 
     <footer id="footer">
