--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <title>PoliTo Chess Club - Events</title>
-    <script src="scripts.js"></script> 
+    <script src="scripts/main.js"></script> 
 </head>
 <body>
     <nav id="header">
