--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
     <title>PoliTo Chess Club</title>
-    <script src="scripts.js"></script> 
+    <script src="scripts/main.js"></script> 
 </head>
 <body>
 
