desktop version completed

--- a/events.html
+++ b/events.html
@@ -76,6 +76,10 @@
         </div>
     </div>
 
+    <div class="preface">
+        <h2>Check out the calendar of our events, days in which there's an event are colored in orange. Learn more about the event by clicking on the colored square!</h1>
+    </div>
+
     <div class="container" id="containerCalendar">
         <div class="calendar">
           <div class="month">
