--- a/otbtournaments.html
+++ b/otbtournaments.html
@@ -65,9 +65,31 @@
     </div>
 
     <div class="carousel-container">
-        <div id="carousel" class="carousel">
 
+        <div class="side-images" style="background: url(./images/logoClubSmallNeg.png) no-repeat center center;">
         </div>
+
+        <div id="carousel" class="carousel">
+        </div>
+
+        <div class="side-images" style="background: url(./images/logoClubSmall2.png) no-repeat center center;">
+        </div>
+
+    </div>
+
+    <div class="past-tournaments-container">
+        <div></div>
+
+        <div id="list-container" class="list-container">
+            <h1 style="text-decoration: underline;">Past Tournaments</h1>
+            <ul>
+                <li>
+                    <a href="https://drive.google.com/file/d/1jsVDb9cWuiEwUrdORATMPv7vHq6mx4B4/view?usp=sharing">Tournaments 21/10/2022</a>
+                </li>
+            </ul>
+        </div>
+
+        <div></div>
     </div>
 
     <footer id="footer">
