--- a/index.html
+++ b/index.html
@@ -49,15 +49,11 @@
     <div id="hamburgerMenu" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="index.html" conclick="closeNav()">Home</a>
+            <a href="index.html" onclick="closeNav()">Home</a>
             <a href="events.html" onclick="closeNav()">Events</a>
             <a href="otbtournaments.html" onclick="closeNav()">OTB Tournaments</a>
             <a href="joinus.html" onclick="closeNav()">Join Us</a>
         </div>
-    </div>
-
-    <div class="popup" id="popup">
-        <h1>We're currently working on this section of the website.</h1>
     </div>
 
     <div class="section">
