--- a/joinus.html
+++ b/joinus.html
@@ -1,3 +1,7 @@
+<!--
+    This page is not used anymore
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
-    <title>PoliTo Chess Club</title>
+    <title>PoliTo Chess Club - Join Us</title>
     <script src="scripts/main.js"></script> 
 </head>
 <body>
@@ -27,7 +31,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li  class="menu-item">
-                    <a href="events.html">Events</a>
+                    <a href="events.html#events">Events</a>
                 </li>
                 <li class="menu-item">
                     <a href="otbtournaments.html">OTB Tournaments</a>
@@ -50,53 +54,40 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="index.html" conclick="closeNav()">Home</a>
-            <a href="events.html" onclick="closeNav()">Events</a>
+            <a href="index.html#events" onclick="closeNav()">Events</a>
             <a href="otbtournaments.html" onclick="closeNav()">OTB Tournaments</a>
             <a href="joinus.html" onclick="closeNav()">Join Us</a>
         </div>
     </div>
 
 
-<div class="section">
-    <div class="section-image">
-        <div class="generic-image" style="background: url(./images/chess.png) no-repeat center center;"></div>
-    </div>
-    <div class="section-text">
-        <div class="generic-content">
-            <a href="https://www.chess.com/club/polito"><h1 style="color: #002B49;">Chess.com</h1></a> 
+    <div class="section" style="height: 60%;">
+        <div class="section-image" style="background-color: white;">
+            <div class="generic-image" style="background: url(./images/chess.png) no-repeat center center;">
+                <a href="https://www.chess.com/club/polito" class="fill-div"></a>
+            </div>
+        </div>
+        <div class="section-image">
+            <div class="generic-image" style="background: url(./images/lichess.png) no-repeat center center;">
+                <a href="https://lichess.org/team/polito" class="fill-div"></a>
+            </div>
         </div>
     </div>
-</div>
-
-<div class="section">
-    <div class="section-text">
-        <div class="generic-content">
-            <a href="https://lichess.org/team/polito"><h1 style="color: #002B49;">Lichess.org</h1></a>
-        </div>
-    </div>
-    <div class="section-image">
-        <div class="generic-image" style="background: url(./images/lichess.png) no-repeat center center;"></div>
-    </div>
-</div>
 
     <footer id="footer">
         <div class="social">
-            <div class="social-list-wrapper">
-                <ul>
-                    <li class="social-item">
-                        <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
-                    </li>
-                    <li class="social-item">
-                        <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
-                    </li>
-                    <li class="social-item">
-                        <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
-                    </li>
-                </ul>  
-            </div>
-        </div>
-        <div class="copyright flexFont">
-            <p>&copy; Copyright 2022, PoliTo Chess Club</p>
+            <ul>
+                <li class="social-item">
+                    <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
+                </li>
+                <li class="social-item">
+                    <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
+                </li>
+                <li class="social-item">
+                    <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
+                </li>
+            </ul>
+            <p>&copy; Copyright 2022, PoliTo Chess Club</p>  
         </div>
     </footer>
 
