--- a/otbtournaments.html
+++ b/otbtournaments.html
@@ -1,3 +1,7 @@
+<!--
+    This page is not used anymore
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
-    <title>PoliTo Chess Club</title>
+    <title>PoliTo Chess Club - OTB Tournaments</title>
     <script src="scripts/main.js"></script>
 </head>
 <body>
@@ -27,7 +31,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li  class="menu-item">
-                    <a href="events.html">Events</a>
+                    <a href="index.html#events">Events</a>
                 </li>
                 <li class="menu-item">
                     <a href="otbtournaments.html">OTB Tournaments</a>
@@ -50,7 +54,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="index.html" conclick="closeNav()">Home</a>
-            <a href="events.html" onclick="closeNav()">Events</a>
+            <a href="index.html#events" onclick="closeNav()">Events</a>
             <a href="otbtournaments.html" onclick="closeNav()">OTB Tournaments</a>
             <a href="joinus.html" onclick="closeNav()">Join Us</a>
         </div>
@@ -90,22 +94,18 @@
 
     <footer id="footer">
         <div class="social">
-            <div class="social-list-wrapper">
-                <ul>
-                    <li class="social-item">
-                        <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
-                    </li>
-                    <li class="social-item">
-                        <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
-                    </li>
-                    <li class="social-item">
-                        <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
-                    </li>
-                </ul>  
-            </div>
-        </div>
-        <div class="copyright flexFont">
-            <p>&copy; Copyright 2022, PoliTo Chess Club</p>
+            <ul>
+                <li class="social-item">
+                    <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
+                </li>
+                <li class="social-item">
+                    <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
+                </li>
+                <li class="social-item">
+                    <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
+                </li>
+            </ul>
+            <p>&copy; Copyright 2022, PoliTo Chess Club</p>  
         </div>
     </footer>
 
