--- a/events.html
+++ b/events.html
@@ -1,3 +1,7 @@
+<!--
+    This page is not used anymore
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -103,24 +107,20 @@
         </div>
       </div>
 
-    <footer>
+      <footer id="footer">
         <div class="social">
-            <div class="social-list-wrapper">
-                <ul>
-                    <li class="social-item">
-                        <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
-                    </li>
-                    <li class="social-item">
-                        <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
-                    </li>
-                    <li class="social-item">
-                        <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
-                    </li>
-                </ul>  
-            </div>
-        </div>
-        <div class="copyright flexFont">
-            <p>&copy; Copyright 2022, PoliTo Chess Club</p>
+            <ul>
+                <li class="social-item">
+                    <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
+                </li>
+                <li class="social-item">
+                    <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
+                </li>
+                <li class="social-item">
+                    <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
+                </li>
+            </ul>
+            <p>&copy; Copyright 2022, PoliTo Chess Club</p>  
         </div>
     </footer>
 
