--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
         </div>
 
         <div id="carousel" class="carousel">
+            <button class="arrows arrows-display-left" onclick="carousel()">&#10094;</button>
+            <button class="arrows arrows-display-right" onclick="carousel()">&#10095;</button>
         </div>
 
         <div class="side-images" style="background: url(./images/knigth.png) no-repeat center center;">
