english grammar errors

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="section-text">
             <div class="generic-content">
                 <h1>Daily puzzles</h1>
-                <p>Check out our Instagram page to stay up to date with the club life. But most important you'll be able to try to solve a daily puzzle posted in the stories. Let's keep trained with us.</p>
+                <p>Check out our Instagram page to stay up to date with club life. But most importantly you'll be able to try and solve a daily chess puzzles we post in our story. Let's all keep ourselves trained.</p>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
         <div class="section-text">
             <div class="generic-content">
                 <h1>Online Tournaments</h1>
-                <p>We orginize online tournaments mainly on lichess opened to everybody, join us in the clubs of lichess/chess.com and you'll be part of the crew.</p>
+                <p>We orginize online tournaments mainly on lichess, open to everyone, join our team on lichess and/or chess.com and be part of the crew.</p>
             </div>
         </div>
         <div class="section-image">
@@ -96,7 +96,7 @@
         <div class="section-text">
             <div class="generic-content">
                 <h1>OTB Tournaments</h1>
-                <p>Over the board tournaments are the best way to meet new friends and get the best out of the club experience. They're organized whenever the spaces are available, check out the news on our telegram group so you'll not miss them.</p>
+                <p>Over the board tournaments are the best way to meet new friends and get the best out of the club experience. They're organized whenever the spaces are available, watch out for updated in our telegram group so you'll make sure not to miss them.</p>
             </div>
         </div>
     </div>
@@ -105,7 +105,7 @@
         <div class="section-text">
             <div class="generic-content">
                 <h1>Seminars</h1>
-                <p>If you're intrested in anyway about the engeeniring and scientific side of chess you will like to participate to our seminars held by University's professors from different faculties.</p>
+                <p>If you're intrested in anyway about the engeeniring and scientific side of chess you might like to participate in our seminars, which are held by the University's professors from different faculties.</p>
             </div>
         </div>
         <div class="section-image">
@@ -120,7 +120,7 @@
         <div class="section-text">
             <div class="generic-content">
                 <h1>IT Comunity</h1>
-                <p>We're recruiting people who want to put theirself into a challenge. The idea is to develope an AI bot that can play chess. Let us know if you're interested to.</p>
+                <p>We're recruiting people who like a challenge. The goal is developing an AI bot that can play chess. Please let us know if you're interested!</p>
             </div>
         </div>
     </div>
@@ -165,7 +165,7 @@
     </div>
 
     <div class="preface" id="otbtournaments">
-        <h2>Here there are some photos about past tournaments and their final result, new tournaments are coming soon...</h1>
+        <h2>Here are some photos from past tournaments and their final result, new tournaments are coming soon...</h1>
     </div>
 
     <div class="carousel-container">
@@ -199,7 +199,7 @@
     </div>
 
     <div class="preface" id="joinus">
-        <h2>Finally we invite you to join us in our online clubs so you can find our chess community in these most common websites.</h1>
+        <h2>Finally, we invite you to join us in our online clubs so you can find our chess community in these common websites:</h1>
     </div>
 
     <div class="section" style="height: 60%;">
