--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/body.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
-    <link rel="stylesheet" type="text/css" href="css/evo-calendar.css"/>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"/>
     <title>PoliTo Chess Club - Home</title>
     <script src="scripts/main.js"></script> 
 </head>
@@ -126,10 +123,12 @@
     </div>
 
     <div class="preface" id="events">
-        <h2>Check out the calendar of our events, days in which there's an event are colored in orange. Learn more about the event by clicking on the colored square!</h1>
+        <div class="generic-content">
+            <h2>Check out the calendar of our events, days in which there's an event are colored in orange. Learn more about the event by clicking on the colored square!</h1>
+        </div>
     </div>
 
-    <div class="container" id="containerCalendar">
+    <div class="container-calendar" id="containerCalendar">
         <div class="calendar">
           <div class="month">
             <i class="fas fa-angle-left prev"></i>
@@ -165,7 +164,9 @@
     </div>
 
     <div class="preface" id="otbtournaments">
-        <h2>Here are some photos from past tournaments and their final result, new tournaments are coming soon...</h1>
+        <div class="generic-content">
+            <h2>Here are some photos from past tournaments and their final result, new tournaments are coming soon...</h1>
+        </div>
     </div>
 
     <div class="carousel-container">
@@ -199,10 +200,12 @@
     </div>
 
     <div class="preface" id="joinus">
-        <h2>Finally, we invite you to join us in our online clubs so you can find our chess community in these common websites:</h1>
+        <div class="generic-content">
+            <h2>Finally, we invite you to join us in our online clubs so you can find our chess community in these common websites:</h1>
+        </div>
     </div>
 
-    <div class="section" style="height: 60%;">
+    <div class="section-joinus">
         <div class="section-image" style="background-color: white;">
             <div class="generic-image" style="background: url(./images/chess.png) no-repeat center center;">
                 <a href="https://www.chess.com/club/polito" class="fill-div"></a>
@@ -228,7 +231,7 @@
                     <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
                 </li>
             </ul>
-            <p>&copy; Copyright 2022, PoliTo Chess Club</p>  
+            <p>&copy; Copyright 2022, PoliTo Chess Club, all rights reserved</p>  
         </div>
     </footer>
 
