--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Koulen">
@@ -128,7 +127,7 @@
         </div>
     </div>
 
-    <div class="container-calendar" id="containerCalendar">
+    <div class="container-calendar flexFont" id="containerCalendar">
         <div class="calendar">
           <div class="month">
             <i class="fas fa-angle-left prev"></i>
@@ -218,21 +217,19 @@
         </div>
     </div>
 
-    <footer id="footer">
-        <div class="social">
-            <ul>
-                <li class="social-item">
-                    <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
-                </li>
-                <li class="social-item">
-                    <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
-                </li>
-                <li class="social-item">
-                    <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
-                </li>
-            </ul>
-            <p>&copy; Copyright 2022, PoliTo Chess Club, all rights reserved</p>  
-        </div>
+    <footer class="footer">
+        <ul>
+            <li class="social-item">
+                <a href="https://www.instagram.com/scacchi_polito/"><img src="./images/instagram.png" alt=""></a>
+            </li>
+            <li class="social-item">
+                <a href="http://t.me/ScacchiPoliTO"><img src="./images/telegram.png" alt=""></a>
+            </li>
+            <li class="social-item">
+                <a href="https://discord.gg/Ff7QnvpNj7"><img src="./images/discord.png" alt=""></a>
+            </li>
+        </ul>
+        <p>&copy; Copyright 2022, PoliTo Chess Club, all rights reserved</p>  
     </footer>
 
 </body>
